--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>
 			<ul class="ba-product_bullet">
 				<li id="ba-bullet--blue" class="ba-bullet_btn ba-bullet_btn--selected"></li>
-				<li id="ba-bullet--white"class="ba-bullet_btn"></li>
+				<li id="ba-bullet--white" class="ba-bullet_btn"></li>
 				<li id="ba-bullet--red" class="ba-bullet_btn"></li>
 				<li id="ba-bullet--lazure" class="ba-bullet_btn"></li>
 			</ul>
@@ -42,9 +42,19 @@
 				<li class="ba-raiting_stars"></li>
 			</ul>
 			<form class="ba-description_added-form">
-				<button class="ba-form_button">Size</button>
-				<button class="ba-form_button">Qty</button>
-				<button class="ba-form_button ba-form_button--added ba-form_button--selected">Add to cart</button>
+				<select class="ba-form_button" name="size" >
+					<option value="size" selected>Size</option>
+					<option value="39">39</option>
+					<option value="40">40</option>
+					<option value="41">41</option>
+				</select>
+				<select class="ba-form_button" name="qty">
+					<option value="qty" selected>Qty</option>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+				</select>
+				<button class="ba-form_button ba-form_button--added">Add to cart</button>
 			</form>
 		</section>
 	</main>
